implement for fluentd-v11
ref. https://gist.github.com/sonots/6199142

--- a/example.conf
+++ b/example.conf
@@ -29,7 +29,7 @@
     capitalize_regex_backreference yes
     rewriterule1 domain ^(maps)\.google\.com$ sitepath.Google$1
   </store>
-</match>
+</filter>
 
 
 # Second level analyzing
@@ -53,7 +53,7 @@
     rewriterule4 agent bingbot site.GoogleMaps.agent_Bingbot
     rewriterule5 agent Baiduspider site.GoogleMaps.agent_Baiduspider
   </store>
-</match>
+</filter>
 
 
 # Summarize
@@ -114,7 +114,7 @@
       pattern5 pc .+
     </template>
   </store>
-</match>
+</filter>
 
 
 # Graph
@@ -128,7 +128,7 @@
     section   response_time
     name_keys 0-100msec_percentage,100-300msec_percentage,300-600msec_percentage,600msec-1sec_percentage,1-2sec_percentage,2-10sec_percentage,10sec_over_percentage
   </template>
-</match>
+</filter>
 
 <match gf.responsecode.**>
   type forest
@@ -140,7 +140,7 @@
     section   response_code
     name_keys 301_count,302_count,3xx_count,403_count,404_count,410_count,4xx_count,500_count
   </template>
-</match>
+</filter>
 
 <match gf.useragent.**>
   type forest
@@ -152,5 +152,5 @@
     section   useragent
     name_keys pc_count,mobile_count,smartphone_count,robot_count,api_count
   </template>
-</match>
+</filter>
 
