--- a/example2.conf
+++ b/example2.conf
@@ -17,14 +17,14 @@
 
 
 # Extract specified virtual domain
-<match td.apache.access>
+<filter td.apache.access>
   type rewrite_tag_filter
   rewriterule1 domain ^maps\.google\.com$ filter.GoogleMap
-</match>
+</filter>
 
 
 # Filtering
-<match filter.GoogleMap>
+<filter filter.GoogleMap>
   type rewrite_tag_filter
   rewriterule1 path ^/(img|css|js|static|assets)/ clear
   rewriterule2 status ^(?!200)$ clear
@@ -32,11 +32,11 @@
   rewriterule4 agent (spider|bot|crawler|\+http\:) clear
   rewriterule5 path ^/(admin|api|backend) site.GoogleMap.backend
   rewriterule6 path .+ site.GoogleMap.front
-</match>
+</filter>
 
 
 # Summarize
-<match site.**>
+<filter site.**>
   type forest
   subtype datacounter
   <template>
@@ -53,11 +53,11 @@
     pattern6 2-10sec ^[2-9]\d{6}$
     pattern7 10sec_over ^\d{8,}$
   </template>
-</match>
+</filter>
 
 
 # Graph
-<match gf.responsetime.**>
+<filter gf.responsetime.**>
   type forest
   subtype growthforecast
   remove_prefix gf.responsetime.site
@@ -67,11 +67,11 @@
     section   response_time
     name_keys 0-100msec_percentage,100-300msec_percentage,300-600msec_percentage,600msec-1sec_percentage,1-2sec_percentage,2-10sec_percentage,10sec_over_percentage
   </template>
-</match>
+</filter>
 
 
 # Clear tag
-<match clear>
+<filter clear>
   type null
-</match>
+</filter>
 
